Added local storage integration

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
             <input type="text" name="name" placeholder="Student Name">
             <input type="number" name="age" placeholder="Age">
             <input type="number" name="rollNo" placeholder="Roll number">
-            <button>Add student</button>
+            <button id="addStudent">Add student</button>
         </form>
     </main>
-    <div class="students">
-        <li>
-
-        </li>
+    <div class="students"></div>
+     <!-- each student is a <div> with name <h2> and age and roll <p> 
+        <div>
+            <h2>John
+            <p>16
+            <p>33
+        </div>
+         -->
     </div>
     <script src="app.js"></script>
 </body>
